tests/cases/attributes/errors/attribute-repr-unsupported.ari
@repr(transparent)
struct Wrapper {
  value: i64,
}

fn main() -> i64 {
  return 0;
}
